@@ -17,7 +17,8 @@ def sendMessage(pytrans, to, fro, body, mtype=None):
 	if(mtype):
 		el.attributes["type"] = mtype
 	b = el.addElement("body")
-	b.addContent(unicode(body))
+	#b.addContent(unicode(body))
+	b.addContent(body.encode("utf-8", "replace"))
 	x = el.addElement("x")
 	x.attributes["xmlns"] = "jabber:x:event"
 	composing = x.addElement("composing")
@@ -31,10 +32,12 @@ def sendPresence(pytrans, to, fro, show=None, status=None, priority=None, ptype=
 		el.attributes["type"] = ptype
 	if(show):
 		s = el.addElement("show")
-		s.addContent(unicode(show))
+		#s.addContent(unicode(show))
+		s.addContent(show.encode("utf-8", "replace"))
 	if(status):
 		s = el.addElement("status")
-		s.addContent(unicode(status))
+		#s.addContent(unicode(status))
+		s.addContent(status.encode("utf-8", "replace"))
 	if(priority):
 		s = el.addElement("priority")
 		s.addContent(priority)
